--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "through": "~2.2.0"
   },
   "devDependencies": {
-    "tape": "~0.2.2",
+    "tape": "~0.2.2"
   },
   "scripts": {
     "test": "node test.js"
